--- a/practice-for-ch-rails-ninety-nine-cats2-long-practice-main/app/views/layouts/application.html.erb
+++ b/practice-for-ch-rails-ninety-nine-cats2-long-practice-main/app/views/layouts/application.html.erb
@@ -11,7 +11,21 @@
     <%= stylesheet_link_tag "application" %>
   </head>
 
-  <body>
+  <body>  
+    <h1>Rent a Cat!</h1>
+
+    <% if logged_in? %>
+      <h2>Hello, <%= current_user.username %>!</h2>
+      <form action="<%= session_url %>" method="POST">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Logout">
+      </form>
+    <% else %>
+      <a href="<%= new_user_url %>">Sign Up</a>
+      <a href="<%= new_session_url %>">Login</a>
+    <% end %>
+  
+
     <nav class="main-nav">
       <h1><a href="<%= cats_url %>">99 Cats</a></h1>
     </nav>
